handle multiple hearings scenario; return most recent account number from each hearing